force-app/main/default/objects/Gestion_de_errores__c/Gestion_de_errores__c.object-meta.xml
<CustomObject>
    <label>Gestión de errores</label>
    <nameField>
        <displayFormat>ErrorNo - {00000000}</displayFormat>
        <label>Error</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestiones de errores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>