force-app/main/default/objects/Gestion_de_errores__c/fields/Codigo_de_error__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_error__c</fullName>
    <label>Código de error</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>