force-app/main/default/objects/Gestion_de_errores__c/fields/Codigo_Navision__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Navision__c</fullName>
    <label>Código Navision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>