force-app/main/default/objects/Gestion_de_errores__c/fields/Codigo_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Salesforce__c</fullName>
    <label>Código Salesforce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>