force-app/main/default/objects/Gestion_de_errores__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gestiones de errores</relationshipLabel>
    <relationshipName>Gestiones_de_errores</relationshipName>
    <type>Lookup</type>
</CustomField>