force-app/main/default/objects/Gestion_de_errores__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección</label>
    <referenceTo>ERUM_Direcciones_Envio__c</referenceTo>
    <relationshipLabel>Gestiones de errores</relationshipLabel>
    <relationshipName>Gestiones_de_errores</relationshipName>
    <type>Lookup</type>
</CustomField>