force-app/main/default/objects/Gestion_de_errores__c/fields/Fecha_y_hora__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_hora__c</fullName>
    <label>Fecha y hora</label>
    <type>DateTime</type>
</CustomField>