force-app/main/default/objects/Gestion_de_errores__c/fields/Integracion_fallida__c.field-meta.xml
<CustomField>
    <fullName>Integracion_fallida__c</fullName>
    <label>Integración fallida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Productos</fullName>
            </value>
            <value>
                <fullName>Tarifas</fullName>
            </value>
            <value>
                <fullName>Clientes</fullName>
            </value>
            <value>
                <fullName>Direcciones</fullName>
            </value>
            <value>
                <fullName>Pedidos</fullName>
            </value>
            <value>
                <fullName>Líneas de Pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>