force-app/main/default/objects/Gestion_de_errores__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Gestiones de errores</relationshipLabel>
    <relationshipName>Gestiones_de_errores</relationshipName>
    <type>Lookup</type>
</CustomField>