force-app/main/default/objects/Gestion_de_errores__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Navision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>