force-app/main/default/objects/Gestion_de_errores__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gestiones de errores</relationshipLabel>
    <relationshipName>Gestiones_de_errores</relationshipName>
    <type>Lookup</type>
</CustomField>