force-app/main/default/objects/Gestion_de_errores__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Gestiones de errores</relationshipLabel>
    <relationshipName>Gestiones_de_errores</relationshipName>
    <type>Lookup</type>
</CustomField>