force-app/main/default/objects/Gestion_de_errores__c/fields/Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tarifa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarifa</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Gestiones de errores</relationshipLabel>
    <relationshipName>Gestiones_de_errores</relationshipName>
    <type>Lookup</type>
</CustomField>