force-app/main/default/objects/Gestion_de_errores__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Integracion_fallida__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Codigo_Navision__c</columns>
    <columns>Codigo_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>